--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^22.14.1",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.4.0",
     "typescript": "^5.4.2",
     "vite": "^5.4.18",
     "vite-tsconfig-paths": "^5.1.0"
